@@ -75,7 +75,10 @@ Version CVS HEAD (?)
     instrument by the sampler and in which order.
   * Samples tree view on main window: display the amount of references for
     each sample and show the respective sample in gray color in case it is not
-    referenced at all. 
+    referenced at all.
+  * Samples tree view: implemented sample reference browser, which shows a
+    tree with all instruments and their respective regions which reference the
+    selected sample once ore more.
 
 Version 0.2.0 (2009-07-31)
 
